data/derived/fa15/progs/unify/prog3474.ml.out
Characters 405-406:
  | SqDist(a, b)    -> (eval(a, x, y) ** 2) +. (eval(b, x, y) ** 2);;
                                         ^
Error: This expression has type int but an expression was expected of type
         float
